@@ -16,8 +16,8 @@ function get_sets()
 	
 	sets['precast_Mana Cede'] = {hands="Call. Bracers +2"}
 				
-	sets.precast_FC = {head="Nares Cap",neck="Orunmila's Torque",ear1="Loquac. Earring",body="Marduk's Jubbah +1",
-		hands="Repartie Gloves",ring2="Prolix Ring",back="Swith Cape",waist="Siegel Sash",legs="Orvail Pants",
+	sets.precast_FC = {head="Nahtirah Hat",neck="Orunmila's Torque",ear1="Loquac. Earring",body="Marduk's Jubbah +1",
+		hands="Mdk. Dastanas +1",ring2="Prolix Ring",back="Swith Cape",waist="Siegel Sash",legs="Orvail Pants",
 		feet="Rostrum Pumps"}
 		
 	sets.precast_Cur = {body="Heka's Kalasiris",legs="Nabu's Shalwar",back="Pahtli Cape"}
@@ -26,25 +26,22 @@ function get_sets()
 	sets.precast_FC_Fire = {main='Atar I'}
 	
 	-- Midcast Sets
-	sets.midcast_Phys_BP = {main="Soulscourge",sub="Vox grip",ammo="Dashavatara Sash",
-		head="Caller's horn +2",neck="Sacrifice torque",ear1="Gifted Earring",ear2="Smn. Earring",
-		body="Call. Doublet +2",hands="Auspex Gages",ring1="Evoker's Ring",ring2="Fervor Ring",
-		back="Astute Cape",waist="Mujin Obi",legs="Ngen Seraweels",feet="Shedir Crackows"}
+	sets.BP_Base = {main="Yaskomo's Pole",sub="Vox grip",ammo="Dashavatara Sash",
+		head="Bokwus Circlet",ear1="Gifted Earring",ear2="Smn. Earring",
+		body="Call. Doublet +2",hands="Spurrina Gages",ring1="Evoker's Ring",ring2="Fervor Ring",
+		legs="Ngen Seraweels",feet="Shedir Crackows"}
+	
+	sets.midcast_Phys_BP = set_combine(sets.BP_Base,{main="Soulscourge",head="Caller's horn +2",neck="Sacrifice torque",back="Astute Cape",waist="Mujin Obi",})
 		
-	sets.midcast_MAB_BP = {main="Yaskomo's Pole",sub="Vox grip",ammo="Dashavatara Sash",
-		head="Hokwus Circlet",neck="Eidolon Pendant",ear1="Gifted Earring",ear2="Smn. Earring",
-		body="Call. Doublet +2",hands="Nares Cuffs",ring1="Evoker's Ring",ring2="Fervor Ring",
-		back="Tiresias' Cape",waist="Caller's sash",legs="Caller's spats +2",feet="Shedir Crackows"}
+	sets.midcast_MAB_No_TP_BP = set_combine(sets.BP_Base,{neck="Eidolon Pendant",back="Tiresias' Cape",waist="Caller's sash"})
 		
-	sets.midcast_MAcc_BP = {main="Yaskomo's Pole",sub="Vox grip",ammo="Dashavatara Sash",
-		head="Hokwus Circlet",neck="Caller's Pendant",ear1="Gifted Earring",ear2="Smn. Earring",
-		body="Anhur Robe",hands="Smn. Bracers +2",ring1="Evoker's Ring",ring2="Fervor Ring",
-		back="Astute Cape",legs="Smn. spats +2",feet="Caller's Pgch. +2"}
+	sets.midcast_MAB_TP_BP = set_combine(sets.BP_Base,{neck="Eidolon Pendant",back="Tiresias' Cape",waist="Caller's sash",legs="Caller's spats +2"})
 		
-	sets.midcast_Buff_BP = {sub="Vox grip",
-		head="Caller's Horn +2",neck="Caller's Pendant",ear1="Gifted Earring",ear2="Smn. Earring",
-		body="Caller's Doublet +2",hands="Smn. Bracers +2",ring1="Evoker's Ring",ring2="Fervor Ring",
-		back="Astute Cape",legs="Nares Trews"}
+	sets.midcast_MAB_Spell = set_combine(sets.BP_Base,{neck="Eidolon Pendant",hands="Nares Cuffs",back="Tiresias' Cape",waist="Caller's sash"})
+		
+	sets.midcast_MAcc_BP = set_combine(sets.BP_Base,{neck="Caller's Pendant",body="Anhur Robe",hands="Smn. Bracers +2",back="Astute Cape",legs="Smn. spats +2",feet="Caller's Pgch. +2"})
+	
+	sets.midcast_Buff_BP = set_combine(sets.BP_Base,{head="Caller's Horn +2",neck="Caller's Pendant",hands="Smn. Bracers +2",back="Astute Cape",legs="Nares Trews"})
 					
 	sets.midcast_Cur = {main="Arka IV",head="Marduk's Tiara +1",ear2="Novia earring",
 		body="Heka's Kalasiris"}
@@ -84,6 +81,13 @@ function get_sets()
 		back="Vita cape",waist="Austerity belt",legs="Nares Trews",feet="Oracle's Pigaches"}
 	
 	sets.aftercast_Idle = sets.aftercast_None
+	
+	
+	-- Variables and notes to myself
+	Debuff_BPs = T{'Diamond Storm','Sleepga','Slowga','Tidal Roar','Shock Squall','Nightmare','Pavor Nocturnus','Ultimate Terror','Somnolence','Lunar Cry','Lunar Roar'}
+	Magical_BPs_affected_by_TP = T{'Heavenly Strike','Wind Blade','Holy Mist','Night Terror','Thunderstorm','Geocrush','Meteor Strike','Grand Fall','Lunar Bay','Thunderspark'} -- Unsure if Thunderspark is affected by TP
+	Magical_BPs_unaffected_by_TP = T{'Nether Blast','Aerial Blast','Searing Light','Diamond Dust','Earthen Fury','Zantetsuken','Tidal Wave','Judgment Bolt','Inferno','Howling Moon','Ruinous Omen'}
+	Additional_effect_BPs = T{'Rock Throw'}	
 end
 
 function precast(spell,action)
@@ -117,7 +121,7 @@ function aftercast(spell,action)
 	end
 end
 
-function status_change(new,old)
+function status_change(new,action)
 	if new=='Idle' then
 		send_command('@gs c Idle')
 	elseif new=='Resting' then
@@ -125,33 +129,37 @@ function status_change(new,old)
 	end
 end
 
-function buff_change(status,gain_or_loss)
-end
-
 function pet_midcast(spell,action)
-	if spell.type=='BloodPactWard' then
-		if T{'Diamond Storm','Sleepga','Slowga','Tidal Roar','Shock Squall'}:contains(spell.name) then
+	if spell.name == 'Perfect Defense' then
+		equip(sets['precast_Elemental Siphon'],{feet="Rubeus Boots"})
+	elseif spell.type=='BloodPactWard' then
+		if Debuff_BPs:contains(spell.name) then
 			equip(sets.midcast_MAcc_BP)
 		else
 			equip(sets.midcast_Buff_BP)
 		end
 	elseif spell.type=='BloodPactRage' then
-		if T{'Heavenly Strike','Wind Blade','Holy Mist','Night Terror','Nether Blast','Thunderstorm'}:contains(spell.name) then
-			equip(sets.midcast_MAB_BP)
-		elseif T{'Predator Claws','Rush','Eclipse Bite','Meteor','Spinning Dive','Flaming Crush','Mountain Buster','Chaotic Strike'}:contains(spell.name) then
-			equip(sets.midcast_Phys_BP)
+		if Magical_BPs_affected_by_TP:contains(spell.name) or string.find(spell.name,' II') or string.find(spell.name,' IV') then
+			equip(sets.midcast_MAB_TP_BP)
+		elseif Magical_BPs_unaffected_by_TP:contains(spell.name) then
+			equip(sets.midcast_MAB_No_TP_BP)
+		elseif Additional_effect_BPs:contains(spell.name) then -- for BPs where the additional effect matters more than the damage
+			equip(sets.midcast_MAcc_BP)
 		else
 			equip(sets.midcast_Phys_BP)
 		end
+	elseif spell.type=='BlackMagic' then
+		equip(sets.midcast_MAB_Spell)
 	end
 end
 
-
 function pet_aftercast(spell,action)
-	
 	send_command('@gs c Idle')
 end
 
+function buff_change(buff,gain_or_loss)
+
+end
 
 function self_command(command)
 	if command == 'Idle' then
